# otus-homework-2

./: CMakeLists.txt  ip_filter.cpp  lib.cpp  test_version.cpp
.github/workflows/: main.yml
